# GeometryModelingKPI

./: CMakeLists.txt  README.md  imgui.ini
include/: application.hpp  definitions.hpp  figure.hpp  helpers.hpp  logger.hpp  object.hpp  point_transformer.hpp  properties.hpp  renderer.hpp  window.hpp
shaders/: background.vert  fragment.frag  vertex.vert
src/: CMakeLists.txt  application.cpp  figure.cpp  helpers.cpp  logger.cpp  main.cpp  object.cpp  point_transformer.cpp  properties.cpp  renderer.cpp  scene_renderer.cpp  ui_rendering.cpp  window.cpp
src/imgui/: CMakeLists.txt  imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp
