cmake_minimum_required(VERSION 3.5)
project(GEOMETRYMODELINGKPI LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(GEOMETRYMODELINGKPI_PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(GEOMETRYMODELINGKPI_SOURCES_ROOT GEOMETRYMODELINGKPI_PROJECT_ROOT}/src)
set(GEOMETRYMODELINGKPI_PROJECT_INCLUDE_DIR "${GEOMETRYMODELINGKPI_SOURCES_ROOT}/include/")

add_subdirectory(src)
